<resources>
    <string name="app_name">Virgin Money</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_btn_title_people">People</string>
    <string name="nav_btn_title_rooms">Rooms</string>
    <string name="room_number">%d</string>
    <string name="room_text">ROOM</string>
    <string name="first_name_text">First Name:</string>
    <string name="last_name_text">Last Name:</string>
    <string name="email_text">Email Address:</string>
    <string name="job_title_text">Job Title:</string>
    <string name="favorite_color">Favourite Colour:</string>
    <string name="created_at">Date:</string>
    <string name="max_occupancy">Max Occupancy:</string>
</resources>