<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:strokeColor="#68ABF8"
    app:cardElevation="8dp"
    app:strokeWidth="1dp"
    app:cardCornerRadius="36dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="133dp">

        <View
            android:id="@+id/color_square"
            android:layout_width="150dp"
            android:layout_height="133dp"
            android:background="@android:color/holo_green_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_room_Text"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="28dp"
            android:text="@string/room_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/room_text" />

        <TextView
            android:id="@+id/tv_room_number_id"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="8dp"
            android:text="@string/room_number"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_room_Text"
            tools:text="1" />

        <TextView
            android:id="@+id/tv_createdAtText"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/created_at"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/color_square"
            app:layout_constraintTop_toTopOf="parent"

            tools:text="CreatedAt" />

        <TextView
            android:id="@+id/tv_createdAt"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/color_square"
            app:layout_constraintTop_toBottomOf="@id/tv_createdAtText"

            tools:text="CreatedAtValue" />


        <TextView
            android:id="@+id/tv_maximum_occupancy_text"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/max_occupancy"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/color_square"
            app:layout_constraintTop_toBottomOf="@id/tv_createdAt"

            tools:text="Max Occupancy" />

        <TextView
            android:id="@+id/tv_maximum_occupancy"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/color_square"
            app:layout_constraintTop_toBottomOf="@id/tv_maximum_occupancy_text"

            tools:text="Occupancy value" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>